# undergrad

./: README.md
CS101 - Intro to CS/Final Project - Movie Recs via Data Scraping/: README.txt  createproject.py  movie.txt
CS101 - Intro to CS/Lab 1 - Car & Initials/: Lab1A-Initials.py  Lab1B-Car.py
CS101 - Intro to CS/Lab 3 - Amino Acids/: Lab3A-AminoAcid.py  Lab3B-LetterGradeCalculator.py
CS101 - Intro to CS/Lab 4 - Number Converter/: Lab4-BinaryOctalDecimalConverter.py
CS250 - Building a Sensor System/: demo.txt
CS261 - Programming Concepts/Problem Set  #7/L7A/: CMakeLists.txt  main.cpp
CS262 - Data Structures/Project 3 - Markov/: CMakeLists.txt  README.txt  brute_model.cpp  brute_model.h  main.cpp  map_model.cpp  map_model.h  markov.cpp  markov.h  model.h  word_model.cpp  word_model.h
CS470 - Machine Learning/: 1a_Getting_Started.ipynb  1b_Optimization.ipynb  2a_Supervised_Learning.ipynb  2b_SL_Regularization.ipynb  2c_SL _SVM_Kernel.ipynb  3a_Unsupervised_Learning.ipynb  3b_UL_Manifold.ipynb  3c_UL_Matrix_Completion.ipynb  3d_UL_Density_Estimation.ipynb  4a_FL_Feature_Selection.ipynb  4b_FL_Feature_Extraction.ipynb  5a_Deep_Learning.ipynb  5b_DL_Autoencoders.ipynb  5c_DL_CNN.ipynb  5d_Natural_Language_Processing.ipynb  5e_DL_RNN.ipynb  6_GAN.ipynb  6_Interpretability.ipynb  6_Reinforcement_Learning.ipynb  6_Transfer_Learning.ipynb  CS1-Data_Visualization.ipynb  CS1-Python_and_Pandas.ipynb  CS_Bayesian_Classifier.ipynb  CS_Foolish_Classifier.ipynb  CS_Job_Placement.ipynb  MLProject.ipynb  Numpy.ipynb
EE307 - Intro to Feedback Control Systems/: demo.txt
(+763 files in other folders)
